--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "connect-history-api-fallback": "^1.2.0",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "expect": "^1.16.0",
@@ -34,9 +35,6 @@
     "json-loader": "^0.5.4",
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.0.0",
-    "redux-devtools": "^3.2.0",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.9",
     "rimraf": "^2.6.1",
     "stripcomment-loader": "^0.1.0",
     "style-loader": "^0.16.0",
@@ -49,14 +47,14 @@
     "axios": "^0.15.3",
     "counterpart": "^0.17.2",
     "deep-equal": "^1.0.1",
+    "events": "^1.1.1",
+    "flux": "^3.1.2",
     "history": "^4.6.1",
+    "keymirror": "^0.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-interpolate-component": "^0.10.0",
-    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.2",
-    "react-translate-component": "^0.13.2",
-    "redux": "^3.3.1"
+    "react-translate-component": "^0.13.2"
   }
 }
