--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "connect-history-api-fallback": "^1.2.0",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "expect": "^1.16.0",
