--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "counterpart": "^0.17.2",
     "deep-equal": "^1.0.1",
     "history": "^4.6.1",
+    "keymirror": "^0.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-interpolate-component": "^0.10.0",
@@ -58,6 +59,9 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.2",
     "react-translate-component": "^0.13.2",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-logger": "^3.0.0",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0"
   }
 }
